src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>SAP_Reference__c</fullName>
        <description>Holds the SAP Code this account if it has been verified. This replaces the SAP_SP_Code__c, SAP_PC_Code__c and SAP_Code__c fields.</description>
        <inlineHelpText>Holds the account&apos;s unique SAP Reference. You may refer to the account by its SAP Reference if you prefer. If it is a Parent-level account (mostly), it will be in the form 5xxxxx, if it is SuperParent-level account, then it is in the form HNCSPxxxxxx.</inlineHelpText>
        <label>SAP Reference</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLAApplies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSM-ACN-S-0036 - SLA Applies checkbox.</description>
        <label>SLA Applies?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLAPenalties__c</fullName>
        <description>CSM-ACN-S-0036 - Text field SLA penalties.</description>
        <label>SLA Penalties</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Specialty__c</fullName>
        <description>ESPSFDCQI-17854</description>
        <inlineHelpText>Please select the Secondary Specialty</inlineHelpText>
        <label>Secondary Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Family Medicine</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Hematology</fullName>
                </value>
                <value>
                    <fullName>Hepatology</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Infectious Disease</fullName>
                </value>
                <value>
                    <fullName>Internal Medicine</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>OBGYN</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Pulmonology</fullName>
                </value>
                <value>
                    <fullName>Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Pediatrics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SendAutomaticCaseAcknowledgmentEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>CSM - ACN - S0023 - Send automatic Case acknowledgment Email checked by default</description>
        <label>Send Automatic Case Acknowledgment Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendCaseCollaborationEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>CSM-1526(Feb-2021) : All - Disable the Case Collaboration Email Notification for Customer</description>
        <label>Send Case Collaboration Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Mulesoft_Outbound_Msg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-MC-ESPSFDCQI-829 -</description>
        <label>Send Mulesoft Outbound Msg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicedesk_Phone_Number__c</fullName>
        <description>Use this field in email  template as merge field</description>
        <label>Servicedesk Phone-Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shared_Folder_Type__c</fullName>
        <label>Shared Folder Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Local Account</fullName>
                </value>
                <value>
                    <fullName>Parent Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shared_Folder_Write_Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared Folder Write Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SiteName__c</fullName>
        <label>Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1462 -</description>
        <inlineHelpText>Please submit a VIA Ticket to MDM Team if you want to change value at the field on Validated Account (MDM Validation Status = Validated)</inlineHelpText>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Closed Ims Company</fullName>
                </value>
                <value>
                    <fullName>Company Purchased By Another Company (New Tax Id)</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Insufficient Address</fullName>
                </value>
                <value>
                    <fullName>Legal Actions</fullName>
                </value>
                <value>
                    <fullName>Liquidity Problems</fullName>
                </value>
                <value>
                    <fullName>Local System Change</fullName>
                </value>
                <value>
                    <fullName>Merger</fullName>
                </value>
                <value>
                    <fullName>Missing Vat#</fullName>
                </value>
                <value>
                    <fullName>Non-Usage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overdue Invoices / Write Offs Done</fullName>
                </value>
                <value>
                    <fullName>Under Dispute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Accounts are validated against SAP to ensure a match and to prevent duplication of accounts. &quot;New&quot; indicates that the account has not yet been validated against SAP, &quot;SAP Validated&quot; means that it should exist as a ParentAccount on SAP</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>SAP Validated</fullName>
                </value>
                <value>
                    <fullName>Validating</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Account__c</fullName>
        <label>Strategic Account</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Hypercare</fullName>
                </value>
                <value>
                    <fullName>Priority Account local</fullName>
                </value>
                <value>
                    <fullName>Local Delivery</fullName>
                </value>
                <value>
                    <fullName>Global Program</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Copper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1354 - Field value dependent on selected Industry.</description>
        <inlineHelpText>Please submit a VIA Ticket to MDM Team if you want to change value at the field on Validated Account (MDM Validation Status = Validated)</inlineHelpText>
        <label>Sub Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CustomerSegment__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TPA_AMA_Account_ID__c</fullName>
        <description>Created by TPA Module.</description>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TPA AMA Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__EC_DupeStatus__c</fullName>
        <label>Entry Check Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__EC_Status__c</fullName>
        <label>Entry Check Status (DO NOT USE)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchKey__c</fullName>
        <formula>Name &amp; BillingPostalCode &amp; BillingCity &amp; BillingState &amp; BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MatchKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchLevel__c</fullName>
        <label>Match Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchScore__c</fullName>
        <label>MatchScore</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <description>CSM-ACN-S-0036 - Long Textfield for Tags.</description>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_AFU_Frequency__c</fullName>
        <description>As per CSM-3257 TECH - AFU Ability to configure frequency and number of reminder.</description>
        <inlineHelpText>Frequency in Days, Weed-End included.</inlineHelpText>
        <label>Tech AFU Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_AFU_Reminder__c</fullName>
        <description>As per CSM-3257 TECH - AFU Ability to configure frequency and number of reminder.</description>
        <label>Tech AFU Reminder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Partner_Recruitement_Tracking__c</fullName>
        <description>PEP-ACN-Tech Partner Recruitment Tracking</description>
        <label>Tech Partner Recruitment Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consideration</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Internal Setup</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Closed - IQVIA withdrew</fullName>
                </value>
                <value>
                    <fullName>Closed - Partner withdrew</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <isActive>false</isActive>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>Contract Follow-Through</fullName>
                    <isActive>false</isActive>
                    <label>Contract Follow-Through</label>
                </value>
                <value>
                    <fullName>Contract Initiation</fullName>
                    <isActive>false</isActive>
                    <label>Contract Initiation</label>
                </value>
                <value>
                    <fullName>Contract Negociation</fullName>
                    <isActive>false</isActive>
                    <label>Contract Negociation</label>
                </value>
                <value>
                    <fullName>Contract Signature</fullName>
                    <isActive>false</isActive>
                    <label>Contract Signature</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TelephonyAccountId__c</fullName>
        <description>CSM-1491 TECH - Mapping reference field for telephony in Account Object</description>
        <label>Telephony AccountId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestEntitlement__c</fullName>
        <label>TestEntitlement</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type2__c</fullName>
        <description>CSM-ACN-S-0036 - Multi picklist with values &quot;Analyst ,Clinical Site ,Competitor ,Customer ,Integrator ,Investor Manufacturer ,Partner ,Press ,Prospect ,Reseller ,Sponsor ,Supplier ,Third Party ,Vendor, Other&quot;
PEP-ACN-PRM-53 - added new values : &quot;Data Partner&quot;, &quot;Tech Partner&quot;, &quot;CLM Agency&quot; and renamed &quot;Integrator&quot; into &quot;Integrator Partner&quot;</description>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Integrator</fullName>
                    <label>Integrator Partner</label>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Data Partner</fullName>
                </value>
                <value>
                    <fullName>Tech Partner</fullName>
                </value>
                <value>
                    <fullName>CLM Agency</fullName>
                </value>
                <value>
                    <fullName>Clinical Site</fullName>
                </value>
                <value>
                    <fullName>RDS Sponsor</fullName>
                </value>
                <value>
                    <fullName>Client Third Party Vendor</fullName>
                </value>
                <value>
                    <fullName>CRO</fullName>
                </value>
                <value>
                    <fullName>Training Partner</fullName>
                </value>
                <value>
                    <fullName>Investigator</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                    <isActive>false</isActive>
                    <label>Manufacturer</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Partner</fullName>
                    <isActive>false</isActive>
                    <label>Partner</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                    <isActive>false</isActive>
                    <label>Reseller</label>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                    <isActive>false</isActive>
                    <label>Supplier</label>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                    <isActive>false</isActive>
                    <label>Third Party</label>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                    <isActive>false</isActive>
                    <label>Vendor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>ESPSFDCQI-16363</description>
        <formula>IF( INCLUDES(Type2__c, &apos;CRO&apos;), &apos;CRO;&apos;, &apos;&apos;) +
IF( INCLUDES(Type2__c, &apos;Site&apos;), &apos;Site;&apos;, &apos;&apos;) +
IF( INCLUDES(Type2__c, &apos;Investigator&apos;), &apos;Investigator;&apos;, &apos;&apos;) +
IF( INCLUDES(Type2__c, &apos;Clinical Site&apos;), &apos;Clinical Site&apos;, &apos;&apos;)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Segment__c</fullName>
        <description>ESPSFDCQI-14340</description>
        <label>US Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorNumber__c</fullName>
        <description>Vendor number of the Account from SAP. Created by TPA Module.</description>
        <inlineHelpText>Vendor number of the Account from SAP.</inlineHelpText>
        <label>Vendor Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Account_Compliance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created Under TPA-MC-ESPSFDCTPA-2260</description>
        <label>Vendor Account Compliance</label>
        <referenceTo>Account_Compliance__c</referenceTo>
        <relationshipLabel>Accounts (Vendor Account Compliance)</relationshipLabel>
        <relationshipName>VendorAccountCompliance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Registration_Number__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Vendor Registration Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Verification_of_Good_Standing__c</fullName>
        <description>ESPSFDCQI-17854</description>
        <inlineHelpText>Please select the Verification of Good Standing</inlineHelpText>
        <label>Verification of Good Standing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed – No Findings</fullName>
                </value>
                <value>
                    <fullName>Completed – Findings</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
                <value>
                    <fullName>Pending Completion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__ExemptionCertificate__c</fullName>
        <description>Tax exemption certificate for the account. We recommend that you use the tax exemption features of Avalara. Use this field only when you are not required to collect tax for the account and your finance team tracks and verifies tax exemption certificates manually.</description>
        <inlineHelpText>Tax exemption certificate for the account. Enter a value if you are not required to collect tax for the account and your finance team tracks and verifies tax exemption certificates manually.</inlineHelpText>
        <label>Exemption Certificate</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsBillingAddressValidated__c</fullName>
        <description>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</description>
        <formula>fferpcore__MaterializedBillingAddressValidated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Billing Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsShippingAddressValidated__c</fullName>
        <description>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</description>
        <formula>fferpcore__MaterializedShippingAddressValidated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__MaterializedBillingAddressValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Foundations to indicate that an address has been validated when Update Address Validated Fields is selected in the FDN Common Object Settings custom setting.</description>
        <label>Billing Address Validated Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__MaterializedShippingAddressValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Foundations to indicate that an address has been validated when Update Address Validated Fields is selected in the FDN Common Object Settings custom setting.</description>
        <label>Shipping Address Validated Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__OutputVatCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The tax code to be used when calculating tax in a VAT or GST company.</description>
        <inlineHelpText>The tax code to be used when calculating tax in a VAT or GST company.</inlineHelpText>
        <label>Output VAT/GST Code</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Output VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__SalesTaxStatus__c</fullName>
        <description>The tax status for this account for SUT companies.</description>
        <inlineHelpText>The tax status for this account for SUT companies.</inlineHelpText>
        <label>Sales Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Exempt for Qualifying Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first SUT tax code for this account.</description>
        <inlineHelpText>The first SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 1</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 1)</relationshipLabel>
        <relationshipName>AccountsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The second SUT tax code for this account.</description>
        <inlineHelpText>The second SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 2</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 2)</relationshipLabel>
        <relationshipName>AccountsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The third SUT tax code for this account.</description>
        <inlineHelpText>The third SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 3</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 3)</relationshipLabel>
        <relationshipName>AccountsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCountryCode__c</fullName>
        <description>Code for the European Union country in which this account operates. You can update the entries in this custom picklist if required.
The country code is required for the correct reporting of VAT on cross-border trades within the European Union.</description>
        <inlineHelpText>The country code for this account. This is required for correct reporting of VAT on cross-border trades within the European Union.</inlineHelpText>
        <label>Tax Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>fferpcore__TaxCountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingCity__c</fullName>
        <description>Billing address city validated by the external tax calculation service.</description>
        <label>Validated Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingCountry__c</fullName>
        <description>Billing address country validated by the external tax calculation service.</description>
        <label>Validated Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingPostalCode__c</fullName>
        <description>Billing address postal code validated by the external tax calculation service.</description>
        <label>Validated Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingState__c</fullName>
        <description>Billing address state or province validated by the external tax calculation service.</description>
        <label>Validated Billing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingStreet__c</fullName>
        <description>Billing address street validated by the external tax calculation service.</description>
        <label>Validated Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingCity__c</fullName>
        <description>Shipping address city validated by the external tax calculation service.</description>
        <label>Validated Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingCountry__c</fullName>
        <description>Shipping address country validated by the external tax calculation service.</description>
        <label>Validated Shipping Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingPostalCode__c</fullName>
        <description>Shipping address postal code validated by the external tax calculation service.</description>
        <label>Validated Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingState__c</fullName>
        <description>Shipping address state or province validated by the external tax calculation service.</description>
        <label>Validated Shipping State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingStreet__c</fullName>
        <description>Shipping address street validated by the external tax calculation service.</description>
        <label>Validated Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__VatRegistrationNumber__c</fullName>
        <description>Identifying number used for VAT purposes.</description>
        <inlineHelpText>Identifying number used for tax purposes.</inlineHelpText>
        <label>Tax Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__VatStatus__c</fullName>
        <description>The tax status for this account for VAT/GST accounts.</description>
        <inlineHelpText>The tax status for this account for VAT/GST accounts.</inlineHelpText>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>EC Non-registered</fullName>
                </value>
                <value>
                    <fullName>EC Registered</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Add_BEIs_To_Existing_Batches__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, all existing billing event items are added to an existing billing event instead of creating a new billing event.</description>
        <inlineHelpText>If selected, all existing billing event items are added to an existing billing event instead of creating a new billing event.</inlineHelpText>
        <label>Add BEIs To Existing Batches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__ERP_Worker_Correlation_Id__c</fullName>
        <description>This records the worker correlation key used within the Foundations system.</description>
        <externalId>true</externalId>
        <inlineHelpText>This records the worker correlation key used within the erp system.</inlineHelpText>
        <label>Foundations Worker Correlation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Services_Billing_Time_Period_Type__c</fullName>
        <label>Services Billing Time Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ALL_DACH_ACCOUNTS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AccountCountry__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL DACH ACCOUNTS</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Germany</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>